--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
+    "css-loader": "^0.28.11",
     "prop-types": "^15.5.10",
     "react": "^15.5.0",
+    "react-css-modules": "^4.7.2",
     "react-dom": "^15.5.0",
     "react-redux": "^5.0.5",
     "redux": "^3.5.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "style-loader": "^0.20.3"
   },
   "scripts": {
     "start": "react-scripts start",
