--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "react-scripts test"
-  }
+  },
+ "homepage" : "http://khelif96.github.io/code-assessment-web"
+
 }
